--- a/src/components/App.css
+++ b/src/components/App.css
@@ -242,7 +242,7 @@ body { overflow:auto !important;padding-right:0 !important; font-family:"Roboto"
 #samples { width: 1000px; margin-right:100px; /*margin: auto;*/ text-align: left; z-index: 0; padding:30px;background:white; display:block;
    padding-left:40px; padding-bottom:140px; max-width:100%;box-shadow: 0 2px 10px #e2e2e2; box-sizing:border-box;
 }
-#samples { padding-bottom: 40px ; width:910px;}
+#samples { padding-bottom: 40px ; width:910px;margin-right:0px;}
 
 #res-container > ul >  li { padding-left:0; pointer-events:none;}
 #res-container > ul h4 { color:#343434; font-size:24px; /*font-family:"Noto Sans";*/ font-weight:900; text-transform:uppercase;}
@@ -251,7 +251,7 @@ body { overflow:auto !important;padding-right:0 !important; font-family:"Roboto"
 
 /* #res-header { justify-content: flex-end;} */
 #res-header { height:70px; position:relative;z-index:1;}
-#res-header > div { width:calc(930px + 130px + 40px); margin-left:calc(230px + 35px * 2); text-align:left; display:flex; 
+#res-header > div { width:calc(930px + 130px + 40px - 100px); margin-left:calc(230px + 35px * 2); margin-right:100px; text-align:left; display:flex; 
    align-items: center; justify-content: space-between;}
 #res-header > div .collapse { padding-left:5px; background:white; 
    /* position:absolute;top:100%;  */
